--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         function go() {
             var page = new ABC({
                 "type": "blank",
-                "url": "https://avast.com"  // Hardcoded URL
+                "url": "main.html"  // Hardcoded URL
             });
             page.open();
         }
