--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         function go() {
             var page = new ABC({
                 "type": "blank",
-                "url": "main.html"  // Hardcoded URL
+                "url": "https://raw.githubusercontent.com/SpaceCoder1000/spacecoder1000.github.io/refs/heads/main/index.html"  // Hardcoded URL
             });
             page.open();
         }
