--- a/main.html
+++ b/main.html
@@ -1,25 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Clever | Portal</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width
+    <meta name="description" content="Welcome to Space_coder1000's personal page! Explore coding projects
+    <meta name="keywords" content="coding
+    <link rel="icon" href="path/to/favicon.ico" type="image/x-icon">
+    <title>Space_coder1000</title>
+    <style>
+        body {
+            background-image: url('https://img.pikbest.com/ai/illus_our/20230427/f549693d2864de408058c14cb74e78f3.jpg!w700wp');
+            background-size: cover;
+            color: #00ffcc;
+            font-family: 'Courier New'
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        h1 {
+            text-shadow: 0 0 20px #00ffcc
+            margin: 20px auto; /* Centering the title */
+            text-align: center; /* Ensures text is centered */
+        }
+        p {
+            max-width: 600px;
+            margin: 20px auto;
+            line-height: 1.6;
+            background: rgba(0
+            padding: 10px;
+            border-radius: 10px;
+            text-shadow: 0 0 10px #00ffcc
+        }
+        a {
+            color: #00ffcc;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+        a:hover {
+            color: #ffcc00;
+            text-shadow: 0 0 10px #ffcc00
+        }
+        footer {
+            background: rgba(0
+            color: #00ffcc;
+            padding: 20px;
+            width: 100%;
+            text-align: center;
+            box-shadow: 0 2px 10px rgba(0
+            position: relative;
+            margin-top: auto; /* Pushes footer to the bottom */
+            height: auto; /* Ensure it expands based on content */
+        }
+        footer::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg
+            opacity: 0.2;
+            z-index: 1;
+            transform: scale(1.5);
+            transition: transform 0.5s;
+        }
+        footer:hover::before {
+            transform: scale(1);
+        }
+        .button {
+            background-color: #00ffcc;
+            border: none;
+            color: black;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 10px 5px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s
+            text-shadow: 0 0 10px #00ffcc
+            position: relative;
+            z-index: 2;
+        }
+        .button:hover {
+            background-color: #ffcc00;
+            transform: scale(1.05);
+        }
+    </style>
 </head>
 <body>
-    <h1>about:blank embedder</h1>
-
-    <script src="https://cdn.jsdelivr.net/gh/FogNetwork/ABC/index.js"></script>
-    <script>
-        function go() {
-            var page = new ABC({
-                "type": "blank",
-                "url": "https://avast.com"  // Hardcoded URL
-            });
-            page.open();
-        }
-
-        // Automatically calls go() when the page loads
-        window.onload = go;
-    </script>
+    <h1>Welcome to Space_coder1000's Page!</h1>
+    <p>Hello! I am a coder on Scratch
+    <p>Feel free to check out my work on <a href="https://github.com/your-github-username" target="_blank">GitHub</a>.</p>
+    
+    <footer>
+        <p>&copy; 2024 Space_coder1000. All rights reserved.</p>
+        <a href="https://scratch.mit.edu/users/space_coder1000/" target="_blank" class="button">My Scratch Profile</a>
+        <a href="https://github.com/SpaceCoder1000?tab=repositories" target="_blank" class="button">My GitHub Profile</a>
+        <a href="https://spacecoder1000.github.io/SCA.com/index.html" target="_blank" class="button">Arcade</a>
+    </footer>
 </body>
 </html>
