--- a/main.html
+++ b/main.html
@@ -94,7 +94,7 @@
 </head>
 <body>
     <h1>Welcome to Space_coder1000's Page!</h1>
-    <p>Hello! I am a coder on Scratch
+    <p>Hello! I am a coder on Scratch</p>
     <p>Feel free to check out my work on <a href="https://github.com/your-github-username" target="_blank">GitHub</a>.</p>
     
     <footer>
