--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width
     <meta name="description" content="Welcome to Space_coder1000's personal page! Explore coding projects
     <meta name="keywords" content="coding
-    <link rel="icon" href="path/to/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="zicon.ico" type="image/x-icon">
     <title>Space_coder1000</title>
     <style>
         body {
@@ -99,9 +99,11 @@
     
     <footer>
         <p>&copy; 2024 Space_coder1000. All rights reserved.</p>
-        <a href="https://scratch.mit.edu/users/space_coder1000/" target="_blank" class="button">My Scratch Profile</a>
-        <a href="https://github.com/SpaceCoder1000?tab=repositories" target="_blank" class="button">My GitHub Profile</a>
-        <a href="https://spacecoder1000.github.io/SCA.com/index.html" target="_blank" class="button">Arcade</a>
+        <div class=button>
+            <a href="https://scratch.mit.edu/users/space_coder1000/" target="_blank" class="button">My Scratch Profile</a>
+            <a href="https://github.com/SpaceCoder1000?tab=repositories" target="_blank" class="button">My GitHub Profile</a>
+            <a href="https://spacecoder1000.github.io/SCA.com/index.html" target="_blank" class="button">Arcade</a>
+        </div>
     </footer>
 </body>
 </html>
