--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width
-    <meta name="description" content="Welcome to Space_coder1000's personal page! Explore coding projects
-    <meta name="keywords" content="coding
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Welcome to Space_coder1000's personal page! Explore coding projects.">
+    <meta name="keywords" content="coding">
     <link rel="icon" href="zicon.ico" type="image/x-icon">
     <title>Space_coder1000</title>
     <style>
@@ -12,7 +12,7 @@
             background-image: url('https://img.pikbest.com/ai/illus_our/20230427/f549693d2864de408058c14cb74e78f3.jpg!w700wp');
             background-size: cover;
             color: #00ffcc;
-            font-family: 'Courier New'
+            font-family: 'Courier New', monospace;
             margin: 0;
             padding: 0;
             display: flex;
@@ -20,18 +20,18 @@
             min-height: 100vh;
         }
         h1 {
-            text-shadow: 0 0 20px #00ffcc
-            margin: 20px auto; /* Centering the title */
-            text-align: center; /* Ensures text is centered */
+            text-shadow: 0 0 20px #00ffcc;
+            margin: 20px auto;
+            text-align: center;
         }
         p {
             max-width: 600px;
             margin: 20px auto;
             line-height: 1.6;
-            background: rgba(0
+            background: rgba(0, 0, 0, 0.7);
             padding: 10px;
             border-radius: 10px;
-            text-shadow: 0 0 10px #00ffcc
+            text-shadow: 0 0 10px #00ffcc;
         }
         a {
             color: #00ffcc;
@@ -40,18 +40,17 @@
         }
         a:hover {
             color: #ffcc00;
-            text-shadow: 0 0 10px #ffcc00
+            text-shadow: 0 0 10px #ffcc00;
         }
         footer {
-            background: rgba(0
+            background: rgba(0, 0, 0, 0.7);
             color: #00ffcc;
             padding: 20px;
             width: 100%;
             text-align: center;
-            box-shadow: 0 2px 10px rgba(0
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
             position: relative;
-            margin-top: auto; /* Pushes footer to the bottom */
-            height: auto; /* Ensure it expands based on content */
+            margin-top: auto;
         }
         footer::before {
             content: '';
@@ -60,7 +59,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(135deg
+            background: linear-gradient(135deg, #00ffcc, transparent);
             opacity: 0.2;
             z-index: 1;
             transform: scale(1.5);
@@ -81,8 +80,8 @@
             margin: 10px 5px;
             cursor: pointer;
             border-radius: 5px;
-            transition: background-color 0.3s
-            text-shadow: 0 0 10px #00ffcc
+            transition: background-color 0.3s;
+            text-shadow: 0 0 10px #00ffcc;
             position: relative;
             z-index: 2;
         }
@@ -94,12 +93,12 @@
 </head>
 <body>
     <h1>Welcome to Space_coder1000's Page!</h1>
-    <p>Hello! I am a coder on Scratch</p>
+    <p>Hello! I am a coder on Scratch.</p>
     <p>Feel free to check out my work on <a href="https://github.com/your-github-username" target="_blank">GitHub</a>.</p>
     
     <footer>
         <p>&copy; 2024 Space_coder1000. All rights reserved.</p>
-        <div class=button>
+        <div>
             <a href="https://scratch.mit.edu/users/space_coder1000/" target="_blank" class="button">My Scratch Profile</a>
             <a href="https://github.com/SpaceCoder1000?tab=repositories" target="_blank" class="button">My GitHub Profile</a>
             <a href="https://spacecoder1000.github.io/SCA.com/index.html" target="_blank" class="button">Arcade</a>
