--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Welcome to Space_coder1000's personal page! Explore coding projects.">
-    <meta name="keywords" content="coding">
+    <meta name="description" content="Welcome to Space_coder1000's personal page! Explore my coding projects, Scratch creations, and more.">
+    <meta name="keywords" content="coding, Scratch, programming, GitHub, web development">
     <link rel="icon" href="zicon.ico" type="image/x-icon">
     <title>Space_coder1000</title>
     <style>
@@ -18,6 +18,7 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            overflow: hidden; /* Prevents page overflow */
         }
         h1 {
             text-shadow: 0 0 20px #00ffcc;
@@ -25,13 +26,14 @@
             text-align: center;
         }
         p {
-            max-width: 600px;
+            max-width: 800px;
             margin: 20px auto;
             line-height: 1.6;
             background: rgba(0, 0, 0, 0.7);
-            padding: 10px;
+            padding: 20px;
             border-radius: 10px;
             text-shadow: 0 0 10px #00ffcc;
+            overflow-wrap: break-word; /* Prevents text overflow */
         }
         a {
             color: #00ffcc;
@@ -52,22 +54,6 @@
             position: relative;
             margin-top: auto;
         }
-        footer::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(135deg, #00ffcc, transparent);
-            opacity: 0.2;
-            z-index: 1;
-            transform: scale(1.5);
-            transition: transform 0.5s;
-        }
-        footer:hover::before {
-            transform: scale(1);
-        }
         .button {
             background-color: #00ffcc;
             border: none;
@@ -82,8 +68,6 @@
             border-radius: 5px;
             transition: background-color 0.3s;
             text-shadow: 0 0 10px #00ffcc;
-            position: relative;
-            z-index: 2;
         }
         .button:hover {
             background-color: #ffcc00;
@@ -93,8 +77,9 @@
 </head>
 <body>
     <h1>Welcome to Space_coder1000's Page!</h1>
-    <p>Hello! I am a coder on Scratch.</p>
-    <p>Feel free to check out my work on <a href="https://github.com/your-github-username" target="_blank">GitHub</a>.</p>
+    <p>Hello! I'm Space_coder1000, an enthusiastic coder passionate about creating interactive projects and exploring various technologies. My journey started on Scratch, where I developed fun games and animations. Since then, I've expanded into web development, focusing on HTML, CSS, and JavaScript.</p>
+    
+    <p>Feel free to check out my projects on GitHub, where I share open-source code and collaborate with others. My main interests include front-end development, game design, and creating engaging user experiences.</p>
     
     <footer>
         <p>&copy; 2024 Space_coder1000. All rights reserved.</p>
