--- a/index.html
+++ b/index.html
@@ -89,5 +89,8 @@
             <a href="https://spacecoder1000.github.io/SCA.com/index.html" target="_blank" class="button">Arcade</a>
         </div>
     </footer>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1020363636228942"
+     crossorigin="anonymous"></script>
 </body>
 </html>
